# flowledger

./: Dockerfile  README.md  compose.yaml  pyproject.toml
app/: db.py  main.py  models.py  schemas.py
app/routers/: activity_log.py  blockers.py  notes.py  projects.py  tasks.py
docker/postgres/init/: 001_schema.sql  002_seed.sql
md/: ai_learning_program_agreed_direction.md  flowledger-progress-step-01-fastapi-skeleton.md  flowledger_git_and_poetry_setup_log.md  step2_database_first_design.md  step3_fastapi_crud_api.md
