[project]
name = "flowledger"
version = "0.1.0"
description = ""
authors = [
    {name = "Tzur Vaich",email = "tzurvaich@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.135.3,<0.136.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.fastapi]
entrypoint = "app.main:app"
